
[package]
name = "aviator5g-controller"
version = "0.1.0"
edition = "2021"


[dependencies]
aviator5g-common = { path = "../aviator5g-common" }

anyhow = "1.0.51"
argh = "0.1.6"
env_logger = "0.9.0"
futures-channel = "0.3.18"
futures-util = { version = "0.3.18", default-features = false, features = ["sink", "std"] }
log = "0.4.14"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["io-std", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.16.0"
tungstenite = "0.16.0"
url = "2.2.2"
